[package]
name = "memory-seek-type"
version = "0.1.0"
edition = "2021"
description = "Shared types for memory-seek frontend and backend"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "10", features = ["chrono-impl"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[bin]]
name = "export-ts"
path = "src/bin/export_ts.rs"
