[package]
name = "memory-seek-frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
reactive_stores = "0.4.3"

# HTTP client for WASM
gloo-net = { version = "0.6", features = ["http"] }

# localStorage access
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "HtmlDocument",
    "Document",
    "MediaQueryList",
    "Element",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared types with backend
memory-seek-type = { path = "../memory-seek-type" }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
